# fnpb

./: .gitignore  README.md  currency_converter.py  ln_channel.py  ln_info.py  ln_invoice.py  makefile  node.py  requirements.txt  setup.cfg  test.py  type_aliases.py
data/: ln_invoice.csv
src/fnpb/ln/: channel.py  info.py  invoice.py
