[metadata]
name = fnpb-alexjrlewis
version = 1.0.0
author = alexjrlewis
author_email = pypi@alexjrlewis.me
description = A full node python bridge package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexjrlewis/fnpb
project_urls =
    Bug Tracker = https://github.com/alexjrlewis/fnpb/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = == 3.10.2
zip_safe = False
install_requires =
    pandas == 1.4.1
    paramiko == 2.9.2
    requests == 2.27.1

[options.packages.find]
where = src
